--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -72,6 +72,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+        
+    - name: Update submodules
+      run: git submodule --init --recursive
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
